[gd_scene load_steps=9 format=2]

[ext_resource path="res://texture/jacket/rabbit.png" type="Texture" id=1]
[ext_resource path="res://texture/emo/emo_03.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/explosion_01.wav" type="AudioStream" id=7]
[ext_resource path="res://script/player/player.gd" type="Script" id=8]
[ext_resource path="res://script/player/player_emo.gd" type="Script" id=9]
[ext_resource path="res://audio/sfx/jump_01.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/sfx/power_up_01.wav" type="AudioStream" id=15]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 4.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 11.9 )
shape = SubResource( 3 )

[node name="Jacket" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Emo" type="Sprite" parent="."]
position = Vector2( -14, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
flip_h = true
script = ExtResource( 9 )

[node name="AudioJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -8.0

[node name="AudioDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0

[node name="AudioPowerUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -6.0
